[package]
name = "cere-cli"
version = "4.8.4"
edition = "2021"

[package.metadata.wasm-pack.profile.release]
# `wasm-opt` has some problems on Linux, see
# https://github.com/rustwasm/wasm-pack/issues/781 etc.
wasm-opt = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
clap = { version = "4.0.15", features = ["derive"], optional = true }
futures = "0.3.21"
log = "0.4.17"
thiserror = "1.0.31"

sp-core = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.33" }
sp-keyring = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.33" }
frame-benchmarking-cli = { git = "https://github.com/paritytech/substrate", optional = true, branch = "polkadot-v0.9.33" }
sc-cli = { git = "https://github.com/paritytech/substrate", optional = true, branch = "polkadot-v0.9.33" }
sc-service = { git = "https://github.com/paritytech/substrate", optional = true, branch = "polkadot-v0.9.33" }
try-runtime-cli = { git = "https://github.com/paritytech/substrate", optional = true, branch = "polkadot-v0.9.33" }
sc-tracing = { git = "https://github.com/paritytech/substrate", optional = true , branch = "polkadot-v0.9.33" }
sc-sysinfo = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.33" }

# this crate is used only to enable `trie-memory-tracker` feature
# see https://github.com/paritytech/substrate/pull/6745
sp-trie = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "polkadot-v0.9.33" }

# Local
cere-client = { path = "../node/client", optional = true }
cere-service = { path = "../node/service", default-features = false, optional = true }

[build-dependencies]
substrate-build-script-utils = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.33" }

[features]
default = ["wasmtime", "cli", "trie-memory-tracker", "cere-native"]
wasmtime = ["sc-cli/wasmtime"]
cli = [
  "clap",
  "sc-cli",
  "sc-service",
  "sc-tracing",
  "frame-benchmarking-cli",
  "try-runtime-cli",
  "cere-client",
]
runtime-benchmarks = ["cere-service/runtime-benchmarks"]
trie-memory-tracker = ["sp-trie/memory-tracker"]
try-runtime = ["cere-service/try-runtime", "try-runtime-cli/try-runtime"]

cere-native = ["cere-service/cere-native"]
cere-dev-native = ["cere-service/cere-dev-native"]
