[package]
name = "ddc-primitives"
version.workspace = true
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true

[dependencies]
blake2 = { workspace = true }
codec = { workspace = true }
frame-support = { workspace = true }
frame-system = { workspace = true }
hex = { workspace = true }
log = { workspace = true }
polkadot-ckb-merkle-mountain-range = { workspace = true }
scale-info = { workspace = true }
serde = { workspace = true }
sp-application-crypto = { workspace = true }
sp-core = { workspace = true }
sp-io = { workspace = true }
sp-runtime = { workspace = true }
sp-std = { workspace = true }

[features]
default = ["std"]
std = [
  "hex/std",
  "blake2/std",
  "polkadot-ckb-merkle-mountain-range/std",
  "codec/std",
  "scale-info/std",
  "sp-core/std",
  "sp-std/std",
  "sp-runtime/std",
  "sp-application-crypto/std",
]
runtime-benchmarks = [
  "frame-support/runtime-benchmarks",
  "frame-system/runtime-benchmarks",
  "sp-runtime/runtime-benchmarks",
]
