[package]
name = "ddc-primitives"
version.workspace = true
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true

[dependencies]
codec.workspace = true
scale-info.workspace = true
serde.workspace = true

# Polkadot SDK
polkadot-sdk = { workspace = true, features = ["frame-support", "frame-system", "sp-core", "sp-runtime", "sp-std"] }

[features]
default = ["std"]
std = [
  "codec/std",
  "polkadot-sdk/std",
  "scale-info/std",
]
runtime-benchmarks = [
  "polkadot-sdk/frame-benchmarking",
  "polkadot-sdk/runtime-benchmarks",
]
try-runtime = [
  "polkadot-sdk/try-runtime",
]
