[package]
name = "customer-deposit"
version = "5.1.0"
authors = ["Use Ink <ink@use.ink>"]
edition = "2021"
publish = false

[dependencies]
base64ct = { version = "=1.6.0" } # the version of `base64ct` should be pinned for ink-related requirements
ddc-primitives = { path = "../../../ddc-primitives", default-features = false }
ink.workspace = true

[lib]
path = "lib.rs"

[features]
default = ["std"]
std = [
  "ink/std",
  "ddc-primitives/std",
]

ink-as-dependency = []
