[package]
name = "cere-cli"
version.workspace = true
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true

[package.metadata.wasm-pack.profile.release]
# `wasm-opt` has some problems on Linux, see
# https://github.com/rustwasm/wasm-pack/issues/781 etc.
wasm-opt = false

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "cere"
path = "src/main.rs"

[dependencies]
# 3rd-party dependencies
clap = { workspace = true, optional = true }
url.workspace = true

# Polkadot SDK
polkadot-sdk = { workspace = true, default-features = true, features = ["frame-benchmarking-cli", "sc-cli", "sc-executor", "sc-network", "sc-service", "sp-io", "sp-runtime"] }

# Local
cere-client = { workspace = true, optional = true }
cere-service = { workspace = true, optional = true }

[build-dependencies]
substrate-build-script-utils = { workspace = true, default-features = true }

[features]
default = ["cli", "cere-dev-native"]
cli = [
  "clap",
  "cere-client",
]
runtime-benchmarks = ["cere-service/runtime-benchmarks"]
cere-native = ["cere-service/cere-native"]
cere-dev-native = ["cere-service/cere-dev-native"]
