[package]
name = "cere-client"
version.workspace = true
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true

[dependencies]
# 3rd-party dependencies
futures.workspace = true

# Polkadot SDK
polkadot-sdk = { workspace = true, default-features = true, features = ["frame-benchmarking", "frame-system", "frame-system-rpc-runtime-api", "pallet-transaction-payment", "pallet-transaction-payment-rpc-runtime-api", "sc-client-api", "sc-executor", "sc-service", "sp-api", "sp-authority-discovery", "sp-block-builder", "sp-blockchain", "sp-consensus", "sp-consensus-babe", "sp-consensus-grandpa", "sp-core", "sp-inherents", "sp-io", "sp-offchain", "sp-runtime", "sp-session", "sp-storage", "sp-timestamp", "sp-transaction-pool"] }

# Local
cere-dev-runtime = { workspace = true, optional = true }
cere-runtime = { workspace = true, optional = true }
ddc-primitives = { workspace = true, default-features = true }
pallet-ismp = { workspace = true, default-features = true }
pallet-ismp-runtime-api = { workspace = true, default-features = true }

[features]
default = ["cere"]
cere = ["cere-runtime"]
cere-dev = ["cere-dev-runtime"]
runtime-benchmarks = []
