[package]
name = "cere-rpc"
version.workspace = true
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true

[dependencies]
# 3rd-party dependencies
jsonrpsee = { workspace = true, default-features = true }

# Polkadot SDK
polkadot-sdk = { workspace = true, default-features = true, features = ["pallet-transaction-payment-rpc", "sc-chain-spec", "sc-client-api", "sc-consensus-babe", "sc-consensus-babe-rpc", "sc-consensus-epochs", "sc-consensus-grandpa", "sc-consensus-grandpa-rpc", "sc-rpc", "sc-rpc-api", "sc-sync-state-rpc", "sc-transaction-pool-api", "sp-api", "sp-block-builder", "sp-blockchain", "sp-consensus", "sp-consensus-babe", "sp-core", "sp-keystore", "sp-runtime", "substrate-frame-rpc-system", "substrate-state-trie-migration-rpc"] }

# Local
ddc-primitives = { workspace = true, default-features = true }
pallet-ismp-rpc = { workspace = true, default-features = true }
pallet-ismp-runtime-api = { workspace = true, default-features = true }
