[package]
name = "sp-runtime-interface-macro"
version = "28.0.0"
authors.workspace = true
edition.workspace = true
license = "Apache-2.0"
homepage.workspace = true
repository.workspace = true
description = "Substrate runtime interface"
documentation = "https://docs.rs/sp-runtime-interface/"
readme = "README.md"

#[lints]
#workspace = true

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
bytes = { workspace = true }
sp-wasm-interface.workspace = true
sp-std.workspace = true
sp-tracing.workspace = true
sp-runtime-interface-proc-macro.workspace = true
sp-runtime-interface-proc-macro.default-features = true
sp-externalities.workspace = true
codec = { features = ["bytes"], workspace = true }
static_assertions = { workspace = true, default-features = true }
primitive-types = { workspace = true }
sp-storage.workspace = true
impl-trait-for-tuples = { workspace = true }
#sp-core = { workspace = true }
#sp-io = { workspace = true }
#sp-state-machine = { workspace = true, default-features = false }

[target.'cfg(all(any(target_arch = "riscv32", target_arch = "riscv64"), substrate_runtime))'.dependencies]
polkavm-derive = { workspace = true }

[dev-dependencies]
#sp-runtime-interface-test-wasm  = { workspace = true }
sp-state-machine = { default-features = true, workspace = true }
sp-core = { default-features = true, workspace = true }
sp-io = { default-features = true, workspace = true}
rustversion = { workspace = true }
trybuild = { workspace = true }

[features]
default = ["std"]
std = [
	"bytes/std",
	"codec/std",
	"primitive-types/std",
	"sp-externalities/std",
	"sp-std/std",
	"sp-storage/std",
	"sp-tracing/std",
	"sp-wasm-interface/std",
]

# ATTENTION
#
# Only use when you know what you are doing.
#
# Disables static assertions in `impls.rs` that checks the word size. To prevent any footgun, the
# check is changed into a runtime check.
disable_target_static_assertions = []
