[package]
name = "cere-runtime-interfaces"
version.workspace = true
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true

[dependencies]
log = { workspace = true }
wasmi = { workspace = true }
wasmtime = { workspace = true }
codec = { workspace = true, features = ["derive"] }
sp-std = { workspace = true }
sp-runtime-interface = { workspace = true }
sp-wasm-interface = { workspace = true }
sc-executor = { workspace = true }
sp-core = { workspace = true }
environmental = { workspace = true }
thiserror = { workspace = true }
lazy_static = { workspace = true, default-features = true }
parking_lot = { workspace = true, default-features = true }
sc-executor-wasmtime = { workspace = true }
cere-dev-runtime = { workspace = true }
cere-runtime = { workspace = true }
sc-executor-common = { workspace = true }
sp-io = { workspace = true, default-features = true }
frame-benchmarking = { workspace = true, default-features = true }

[features]
default = ["std"]
std = [
    "log/std",
    "codec/std",
    "sp-std/std",
    "sp-runtime-interface/std",
    "sp-wasm-interface/std",
    "sp-core/std",
    "wasmi/std",
]